--- a/public/history.txt
+++ b/public/history.txt
@@ -1,9 +1,11 @@
-08.02.2017 basic Koa server settings, user C.R.U.D. added
+26.10.2017 angular web app added, C.R.U.D user on UI added, updating user role added, bugs fixed
 
-13.02.2017 validation and unit tests added
-
-14.02.2017 end-to-end tests added
+11.10.2017 api documentation, hisory file, password hashing, users list pagination added. tests fixed
 
 22.08.2017 MongoDB added. Async fixed
 
-11.10.2017 api documentation, hisory file, password hashing, users list pagination added. tests fixed
+14.02.2017 end-to-end tests added
+
+13.02.2017 validation and unit tests added
+
+08.02.2017 basic Koa server settings, user C.R.U.D. added
