--- a/public/history.txt
+++ b/public/history.txt
@@ -1,4 +1,6 @@
-27.10.2017 get users order changed from (1, -1) to ('asc', 'desc'), bugs fixed
+04.11.2017 authorization local and jwt added, tests added and update, bugs fixed
+
+27.10.2017 get users order changed from (1, -1) to ('asc', 'desc'),
 
 11.10.2017 api documentation, hisory file, password hashing, users list pagination added. tests fixed
 
