--- a/public/history.txt
+++ b/public/history.txt
@@ -1,3 +1,5 @@
+07.11.2017 authentication and role handling on web app added
+
 04.11.2017 authorization local and jwt added, tests added and update, bugs fixed
 
 27.10.2017 get users order changed from (1, -1) to ('asc', 'desc'),
